<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="176dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:backgroundTint="#2196F3"
        android:text="@string/tarefas_pendentes"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="646dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginStart="76dp"
        android:backgroundTint="#2196F3"
        android:text="@string/editar_tarefas"
        app:layout_constraintStart_toStartOf="@+id/switch1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="643dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gerenciador_de_tarefas"
        android:textColor="#2196F3"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <Button
        android:id="@+id/button"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="#2196F3"
        android:text="@string/excluir"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate2"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="241dp"
        android:layout_height="61dp"
        android:layout_marginBottom="64dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textColorHint="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="85dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="238dp"
        android:layout_height="61dp"
        android:layout_marginBottom="72dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/descri_o"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textColorHighlight="#3F51B5"
        android:textColorHint="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        tools:ignore="LabelFor,MissingConstraints" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:rotationX="4"
        android:text="@string/concluida"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="553dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#2196F3"
        android:text="@string/adicionar"
        android:textColor="#FFF9F9"
        android:textColorHint="#FAF7F7"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="278dp" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:text="@string/data_do_vencimento"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        tools:ignore="LabelFor,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>